--- a/scryptttt/scryptttt.vcxproj
+++ b/scryptttt/scryptttt.vcxproj
@@ -138,7 +138,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Neuron.cpp" />
+    <ClCompile Include="NeuronLayer.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Synapse.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Neuron.h" />
+    <ClInclude Include="NeuronLayer.h" />
+    <ClInclude Include="structures.h" />
+    <ClInclude Include="Synapse.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
